# omnivoice-api

./: .dockerignore  .env.example  .env.prod.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pixi.toml  pyproject.toml
.github/workflows/: build-image.yml
src/omnivoice_api/: config.py  device.py  main.py  schemas.py  security.py  service.py  storage.py
src/omnivoice_api/scripts/: download_model.py
tests/: conftest.py  test_e2e_clone.py
